# Sachsen

./: Cargo.toml  LICENSE  README.en.md  README.md  docker-compose.yml  package-lock.json  package.json  sachsen.code-workspace  turbo.json
apps/api/: .env.example  README.md  package.json  tsconfig.json
apps/api/prisma/: schema.prisma  seed.ts
apps/api/src/: app.module.ts  main.ts
apps/api/src/auth/: auth.controller.ts
apps/api/src/servers/: servers.controller.ts
apps/api/src/users/: users.controller.ts  users.module.ts  users.service.ts
apps/api/test/: app.e2e-spec.ts
apps/app/: 2  Cargo.toml  README.md  package.json  tauri.conf.json
apps/app-frontend/: .env.example  README.md  dialog.html  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.mts
apps/app-frontend/src/: App.vue  main.ts  vite-env.d.ts
apps/app-frontend/src/api/: auth.api.ts  axios.ts  blogs.api.ts  friends.api.ts  minecraft.api.ts  questions.api.ts  skins.api.ts  user.api.ts
apps/app-frontend/src/layouts/: MainLayout.vue  SimpleLayout.vue
apps/app-frontend/src/routers/: router.ts
apps/app-frontend/src/stores/: app.store.ts  auth.store.ts  launcher.store.ts  server.store.ts  socket.store.ts  user.store.ts
apps/app-frontend/src/types/: answer.ts  asset.type.ts  blog.type.ts  launcher.type.ts  mod.type.ts  question.type.ts  server-status.type.ts  server.type.ts  user.type.ts
apps/app-frontend/src/views/: AdminBlogsView.vue  AdminHomeView.vue  AdminServersView.vue  AdminUsersView.vue  AdminView.vue  AlertView.vue  App.vue  BanView.vue  ConfirmView.vue  DonateView.vue  FriendsView.vue  (+5 more)
apps/app/capabilities/: default.json
apps/app/icons/: icon.icns
apps/app/src/: lib.rs  state.rs
apps/app/src/api/: auth.rs
apps/app/src/db/: auth.rs  core.rs
apps/app/src/models/: auth.rs
apps/app/src/plugin/: archive.rs  minecraft.rs  mod.rs
apps/backend/: package.json
apps/backend/prisma/: schema.prisma  seed.ts
apps/backend/src/: app.module.ts  main.ts
apps/web-frontend/: README.md  package.json  tsconfig.json  vite.config.js  vite.config.ts
(+155 files in other folders)
