[package]
name = "SachsenLauncher"
version = "1.0.0"
description = "A Sachsen Launcher"
authors = ["Moln1kas"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.9.2", features = [] }
tauri-plugin-opener = "2.5.2"
tauri-plugin-shell = "2.3.3"
tauri-plugin-fs = "2.4.4"
tauri-plugin-sql = { version = "2.3.1", features = ["sqlite"] }
tauri-plugin-upload = "2.3.2"
tar = "0.4.44"
flate2 = "1.1.5"
zip = "6.0.0"
tauri-plugin-os = "2.3.1"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-log = "2.7.1"
fastnbt = "2.6"
tauri-plugin-websocket = "2"

